Fix h2 woocommerce li products font size on mobile

--- a/style.css
+++ b/style.css
@@ -1547,11 +1547,10 @@ h2.woocommerce-loop-product__title {
 	bottom: 0;
 	color: var(--emp-content-shortcode-color)!important;
 	display: flex;
-	font-size: 30px!important;
 	height: 100%;
 	justify-content: center;
 	opacity: .8;
-	padding: 20px 15px 0px 15px!important;
+	padding: 20px 10px 0px 10px!important;
 	position: absolute;
 	width: 100%;
 }
